--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>java-client</artifactId>
       <version>3.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+      <version>4.1.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
