--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -33,6 +33,10 @@
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
       <version>4.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
