--- a/runtime/src/main/resources/META-INF/native-image/resource-config.json
+++ b/runtime/src/main/resources/META-INF/native-image/resource-config.json
@@ -9,7 +9,11 @@
     {"pattern":"\\Qapplication.properties\\E"}, 
     {"pattern":"\\Qlogback.xml\\E"}, 
     {"pattern":"\\Qorg/jboss/threads/Version.properties\\E"}, 
-    {"pattern":"\\Qorg/slf4j/impl/StaticLoggerBinder.class\\E"}
+    {"pattern":"\\Qorg/slf4j/impl/StaticLoggerBinder.class\\E"},
+
+    {"pattern":"\\QMETA-INF/services/jdk.vm.ci.hotspot.HotSpotJVMCIBackendFactory\\E"},
+    {"pattern":"\\QMETA-INF/services/jdk.vm.ci.services.JVMCIServiceLocator\\E"},
+    {"pattern":"\\Qcom/sun/jna/linux-x86-64/libjnidispatch.so\\E"}
   ]},
   "bundles":[]
 }
