--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -28,7 +28,7 @@
 <!--        <systemPath>${project.basedir}/javaclientdeps/NAME.jar</systemPath>-->
 <!--      </dependency>-->
 
-  <!-- AAAAAAAAAAAAAAAAAAAAAAAAAA -->
+  <!-- Multiple local imports -->
       <!-- Core IO -->
       <dependency>
         <groupId>com.couchbase.client</groupId>
@@ -37,21 +37,6 @@
         <scope>system</scope>
         <systemPath>${project.basedir}/javaclientdeps/core-io-3.7.2-SNAPSHOT.jar</systemPath>
       </dependency>
-      <dependency>
-        <groupId>com.couchbase.client</groupId>
-        <artifactId>core-io-javadoc</artifactId>
-        <version>3.7.2-SNAPSHOT</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/javaclientdeps/core-io-3.7.2-SNAPSHOT-javadoc.jar</systemPath>
-      </dependency>
-      <dependency>
-        <groupId>com.couchbase.client</groupId>
-        <artifactId>core-io-sources</artifactId>
-        <version>3.7.2-SNAPSHOT</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/javaclientdeps/core-io-3.7.2-SNAPSHOT-sources.jar</systemPath>
-      </dependency>
-
       <!-- Core IO Dependencies -->
       <dependency>
         <groupId>com.couchbase.client</groupId>
@@ -69,21 +54,6 @@
         <scope>system</scope>
         <systemPath>${project.basedir}/javaclientdeps/java-client-3.7.2-SNAPSHOT.jar</systemPath>
       </dependency>
-      <dependency>
-        <groupId>com.couchbase.client</groupId>
-        <artifactId>java-client-javadoc</artifactId>
-        <version>3.7.2-SNAPSHOT</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/javaclientdeps/java-client-3.7.2-SNAPSHOT-javadoc.jar</systemPath>
-      </dependency>
-      <dependency>
-        <groupId>com.couchbase.client</groupId>
-        <artifactId>java-client-sources</artifactId>
-        <version>3.7.2-SNAPSHOT</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/javaclientdeps/java-client-3.7.2-SNAPSHOT-sources.jar</systemPath>
-      </dependency>
-
       <!-- Additional Dependencies -->
       <dependency>
         <groupId>net.java.dev.jna</groupId>
@@ -121,7 +91,7 @@
         <systemPath>${project.basedir}/javaclientdeps/slf4j-api-1.7.36.jar</systemPath>
       </dependency>
 
-    <!-- AAAAAAAAAAAAAAAAAAAAAAAAAA -->
+    <!-- End multiple local imports -->
 
     <dependency>
       <groupId>org.graalvm.sdk</groupId>
