--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.couchbase.client</groupId>
       <artifactId>java-client</artifactId>
-      <version>${couchbase.client.version}</version>
+      <version>3.7.1</version>
     </dependency>
     <dependency>
       <groupId>org.graalvm.sdk</groupId>
