--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -2,3 +2,4 @@ quarkus.couchbase.connection-string=localhost
 quarkus.couchbase.username=Administrator
 # needs to be at least 8 characters
 quarkus.couchbase.password=password
+quarkus.devservices.enabled=false
